--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-sass": "^4.1.0"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "browser-sync": "^2.26.14",
     "browsersync": "0.0.1-security"
   }
